--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,21 +6,31 @@
 }
 
 body {
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 40px;
+    padding: 30px;
     gap: 10px;
     background: black;
     color: white;
-    background: rgb(52,44,177);
     background: linear-gradient(90deg, rgba(52,44,177,1) 0%, rgba(0,212,255,1) 97%);
+}
+
+h1 {
+    text-align: center;
+}
+
+h4, p {
+    text-align: justify;
 }
 
 ul {
     list-style-type: none;
-    padding: 50px;
+    padding: 30px;
     font-size: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
 
 li {
